--- a/HW 1 - Data Pre Processing/ParsaKamaliPour_HW1.ipynb
+++ b/HW 1 - Data Pre Processing/ParsaKamaliPour_HW1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
@@ -39,12 +39,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.core.display_functions import display\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
@@ -1745,6 +1745,286 @@
     "label_encoder_mall_customers[['Gender']] = gender_df\n",
     "display(label_encoder_mall_customers)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 8. Use PCA to reduce 4 dimension of Gender & age & Annual Income & Spending Score to 3 dimension"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     Gender  Age  Annual Income (k$)  Spending Score (1-100)\n0         1   19                  15                      39\n1         1   21                  15                      81\n2         0   20                  16                       6\n3         0   23                  16                      77\n4         0   31                  17                      40\n..      ...  ...                 ...                     ...\n195       0   35                 120                      79\n196       0   45                 126                      28\n197       1   32                 126                      74\n198       1   32                 137                      18\n199       1   30                 137                      83\n\n[200 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Gender</th>\n      <th>Age</th>\n      <th>Annual Income (k$)</th>\n      <th>Spending Score (1-100)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>19</td>\n      <td>15</td>\n      <td>39</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>21</td>\n      <td>15</td>\n      <td>81</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>20</td>\n      <td>16</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>23</td>\n      <td>16</td>\n      <td>77</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>31</td>\n      <td>17</td>\n      <td>40</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>0</td>\n      <td>35</td>\n      <td>120</td>\n      <td>79</td>\n    </tr>\n    <tr>\n      <th>196</th>\n      <td>0</td>\n      <td>45</td>\n      <td>126</td>\n      <td>28</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>1</td>\n      <td>32</td>\n      <td>126</td>\n      <td>74</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>1</td>\n      <td>32</td>\n      <td>137</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>1</td>\n      <td>30</td>\n      <td>137</td>\n      <td>83</td>\n    </tr>\n  </tbody>\n</table>\n<p>200 rows × 4 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "selected_4_dim = label_encoder_mall_customers[['Gender', 'Age', 'Annual Income (k$)', 'Spending Score (1-100)']]\n",
+    "display(selected_4_dim)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "outputs": [],
+   "source": [
+    "ss_4_dim = StandardScaler().fit_transform(selected_4_dim)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       Gender       Age  Annual Income (k$)  Spending Score (1-100)\n0    1.128152 -1.424569           -1.738999               -0.434801\n1    1.128152 -1.281035           -1.738999                1.195704\n2   -0.886405 -1.352802           -1.700830               -1.715913\n3   -0.886405 -1.137502           -1.700830                1.040418\n4   -0.886405 -0.563369           -1.662660               -0.395980\n..        ...       ...                 ...                     ...\n195 -0.886405 -0.276302            2.268791                1.118061\n196 -0.886405  0.441365            2.497807               -0.861839\n197  1.128152 -0.491602            2.497807                0.923953\n198  1.128152 -0.491602            2.917671               -1.250054\n199  1.128152 -0.635135            2.917671                1.273347\n\n[200 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Gender</th>\n      <th>Age</th>\n      <th>Annual Income (k$)</th>\n      <th>Spending Score (1-100)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.128152</td>\n      <td>-1.424569</td>\n      <td>-1.738999</td>\n      <td>-0.434801</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1.128152</td>\n      <td>-1.281035</td>\n      <td>-1.738999</td>\n      <td>1.195704</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-0.886405</td>\n      <td>-1.352802</td>\n      <td>-1.700830</td>\n      <td>-1.715913</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.886405</td>\n      <td>-1.137502</td>\n      <td>-1.700830</td>\n      <td>1.040418</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.886405</td>\n      <td>-0.563369</td>\n      <td>-1.662660</td>\n      <td>-0.395980</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>-0.886405</td>\n      <td>-0.276302</td>\n      <td>2.268791</td>\n      <td>1.118061</td>\n    </tr>\n    <tr>\n      <th>196</th>\n      <td>-0.886405</td>\n      <td>0.441365</td>\n      <td>2.497807</td>\n      <td>-0.861839</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>1.128152</td>\n      <td>-0.491602</td>\n      <td>2.497807</td>\n      <td>0.923953</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>1.128152</td>\n      <td>-0.491602</td>\n      <td>2.917671</td>\n      <td>-1.250054</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>1.128152</td>\n      <td>-0.635135</td>\n      <td>2.917671</td>\n      <td>1.273347</td>\n    </tr>\n  </tbody>\n</table>\n<p>200 rows × 4 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ss_4_dim_df = pd.DataFrame(ss_4_dim, columns=['Gender', 'Age', 'Annual Income (k$)', 'Spending Score (1-100)'])\n",
+    "display(ss_4_dim_df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=3)\n",
+    "principalComponents = pca.fit_transform(ss_4_dim)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          PC1       PC2       PC3\n0   -0.406383 -0.520714 -2.072527\n1   -1.427673 -0.367310 -2.277644\n2    0.050761 -1.894068 -0.367375\n3   -1.694513 -1.631908 -0.717467\n4   -0.313108 -1.810483 -0.426460\n..        ...       ...       ...\n195 -1.179572  1.324568  1.932441\n196  0.672751  1.221061  2.438084\n197 -0.723719  2.765010  0.583178\n198  0.767096  2.861930  1.150341\n199 -1.065015  3.137256  0.788146\n\n[200 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PC1</th>\n      <th>PC2</th>\n      <th>PC3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-0.406383</td>\n      <td>-0.520714</td>\n      <td>-2.072527</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-1.427673</td>\n      <td>-0.367310</td>\n      <td>-2.277644</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.050761</td>\n      <td>-1.894068</td>\n      <td>-0.367375</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-1.694513</td>\n      <td>-1.631908</td>\n      <td>-0.717467</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.313108</td>\n      <td>-1.810483</td>\n      <td>-0.426460</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>-1.179572</td>\n      <td>1.324568</td>\n      <td>1.932441</td>\n    </tr>\n    <tr>\n      <th>196</th>\n      <td>0.672751</td>\n      <td>1.221061</td>\n      <td>2.438084</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>-0.723719</td>\n      <td>2.765010</td>\n      <td>0.583178</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>0.767096</td>\n      <td>2.861930</td>\n      <td>1.150341</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>-1.065015</td>\n      <td>3.137256</td>\n      <td>0.788146</td>\n    </tr>\n  </tbody>\n</table>\n<p>200 rows × 3 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "principal_df = pd.DataFrame(principalComponents, columns=[\"PC1\", 'PC2', 'PC3'])\n",
+    "display(principal_df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 9. Evaluate PCA explainded_variance_ratio"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.33690046, 0.26230645, 0.23260639])"
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_ratio_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1.35437369, 1.05449828, 0.93510105])"
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=3)\n",
+    "principalComponents2 = pca.fit_transform(selected_4_dim)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "           PC1        PC2        PC3\n0   -31.869945 -33.001252 -22.142987\n1     0.764494 -56.842901 -10.542634\n2   -57.408276 -13.124961 -28.750964\n3    -2.168543 -53.478590  -9.511588\n4   -32.174085 -30.388412 -10.225069\n..         ...        ...        ...\n195  58.352515  31.017542   3.200135\n196  19.908001  66.446108   1.242664\n197  58.520804  38.346039  -0.834218\n198  20.979130  79.376405 -13.645474\n199  72.447693  41.811336  -0.651273\n\n[200 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PC1</th>\n      <th>PC2</th>\n      <th>PC3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-31.869945</td>\n      <td>-33.001252</td>\n      <td>-22.142987</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.764494</td>\n      <td>-56.842901</td>\n      <td>-10.542634</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-57.408276</td>\n      <td>-13.124961</td>\n      <td>-28.750964</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-2.168543</td>\n      <td>-53.478590</td>\n      <td>-9.511588</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-32.174085</td>\n      <td>-30.388412</td>\n      <td>-10.225069</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>58.352515</td>\n      <td>31.017542</td>\n      <td>3.200135</td>\n    </tr>\n    <tr>\n      <th>196</th>\n      <td>19.908001</td>\n      <td>66.446108</td>\n      <td>1.242664</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>58.520804</td>\n      <td>38.346039</td>\n      <td>-0.834218</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>20.979130</td>\n      <td>79.376405</td>\n      <td>-13.645474</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>72.447693</td>\n      <td>41.811336</td>\n      <td>-0.651273</td>\n    </tr>\n  </tbody>\n</table>\n<p>200 rows × 3 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "principal2_df = pd.DataFrame(principalComponents2, columns=[\"PC1\", 'PC2', 'PC3'])\n",
+    "display(principal2_df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.45118077, 0.44091539, 0.10774566])"
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_ratio_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([700.26443231, 684.33184134, 167.22888104])"
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
